--- a/public/static/no_support.html
+++ b/public/static/no_support.html
@@ -87,7 +87,7 @@
           Wij adviseren u om een andere browser te gebruiken, zoals <a target="_blank" href="https://www.microsoft.com/nl-nl/edge">Microsoft Edge</a>, <a target="_blank" href="https://www.mozilla.org/en-US/firefox/new/">Firefox</a> en <a class="c-link" href="https://www.google.com/chrome/">Chrome</a>.
         </p>
         <p>Bent u een medewerker van de gemeente en bent u ingelogd op ADW? Hieronder ziet u hoe u bijvoorbeeld Chrome kunt gebruiken op ADW</p>
-        <img src="/modern-browser.gif" alt="Chrome">
+        <img src="/modern-browser.jpg" alt="Chrome">
       </div>
     </div>
   </body>
