Modified text in no_support.html

--- a/public/static/no_support.html
+++ b/public/static/no_support.html
@@ -84,7 +84,7 @@
       <div class="c-page__content">
         <div class="c-page__main-content">U bezoekt de website met een browser die niet meer ondersteund wordt.</div>
         <p>
-          Wij adviseren u om een andere browser te gebruiken, zoals <a target="_blank" rel="noreferrer noopener" href="https://www.microsoft.com/nl-nl/edge">Microsoft Edge</a>, <a target="_blank" rel="noreferrer noopener" href="https://www.mozilla.org/en-US/firefox/new/">Firefox</a> en <a target="_blank" rel="noreferrer noopener" href="https://www.google.com/chrome/">Chrome</a>.
+          Wij adviseren u om de laatste versie van een andere browser te gebruiken, zoals <a target="_blank" rel="noreferrer noopener" href="https://www.microsoft.com/nl-nl/edge">Microsoft Edge</a>, <a target="_blank" rel="noreferrer noopener" href="https://www.mozilla.org/en-US/firefox/new/">Firefox</a> en <a target="_blank" rel="noreferrer noopener" href="https://www.google.com/chrome/">Chrome</a>.
         </p>
         <p>Bent u een medewerker van de gemeente en bent u ingelogd op ADW? Hieronder ziet u hoe u bijvoorbeeld Chrome kunt gebruiken op ADW</p>
         <img src="/modern-browser.jpg" alt="Chrome">
