Adds tracking pixel to no_support.html

--- a/public/static/no_support.html
+++ b/public/static/no_support.html
@@ -90,5 +90,6 @@
         <img src="/modern-browser.jpg" alt="Chrome">
       </div>
     </div>
+    <img src="https://analytics.data.amsterdam.nl/matomo.php?idsite=1&amp;rec=1" alt=""/>
   </body>
 </html>
