Drop support for Firefox ESR versions that are no longer maintained

--- a/public/static/no_support.html
+++ b/public/static/no_support.html
@@ -72,6 +72,8 @@
         font-family: "Avenir LT W01 85 Heavy", Arial, sans-serif
       }
     </style>
+
+    <script src="/browser-support-check.js"></script>
   </head>
 
   <body>
@@ -87,6 +89,7 @@
           Wij adviseren u om de laatste versie van een andere browser te gebruiken, zoals <a target="_blank" rel="noreferrer noopener" href="https://www.microsoft.com/nl-nl/edge">Microsoft Edge</a>, <a target="_blank" rel="noreferrer noopener" href="https://www.mozilla.org/en-US/firefox/new/">Firefox</a> en <a target="_blank" rel="noreferrer noopener" href="https://www.google.com/chrome/">Chrome</a>.
         </p>
         <p>Bent u een medewerker van de gemeente en bent u ingelogd op ADW? Hieronder ziet u hoe u bijvoorbeeld Chrome kunt gebruiken op ADW</p>
+        <p><b>Let op!</b> Alleen ADW Next is ondersteund, oudere versies van ADW lopen te ver achter om goed ondersteund te kunnen worden.</p>
         <img src="/modern-browser.jpg" alt="Chrome">
       </div>
     </div>
